<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_spend"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#acdde4"
    android:orientation="vertical"
    tools:context="com.example.android.spends.MainActivity">

    <TextView
        android:text="@string/spend_view_category"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/textView2"
        android:layout_weight="1" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="34dp"
        android:id="@+id/spend_edit_spinner" />

    <TextView
        android:text="@string/spend_view_amount"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:ems="10"
        android:id="@+id/spend_edit_amount" />

    <TextView
        android:text="@string/spend_view_description"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:ems="10"
        android:id="@+id/spend_edit_description" />

    <Button
        android:text="@string/spend_edit_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:onClick="updateSpend"
        android:id="@+id/button" />
</LinearLayout>
