<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_category"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#acdde4"
    android:orientation="vertical"
    tools:context="com.example.android.spends.MainActivity">


    <EditText
        android:id="@+id/category_title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/category_title"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/category_description"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:ems="10"
        android:hint="@string/category_description"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/save_category_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:onClick="createCategory"
        android:text="@string/category_save" />
</LinearLayout>
